# data_loader

./: .dockerignore  CHECKLIST.md  CLUSTER_MODE.md  DOCKER_SETUP_SUMMARY.md  Dockerfile  Dockerfile.test  IDEMPOTENCY_GUIDE.md  README.md  ROADMAP.md  cluster_demo.py  demo_databricks_job.py  docker-compose.override.yml  docker-compose.yml  example_config.json  example_config.yaml  example_usage.py  pyproject.toml  quick-start.sh  requirements.txt  setup.py
.github/: copilot-instructions.md
data_loader/: __init__.py  databricks_job.py  job_runner.py  main.py
data_loader/cluster/: __init__.py  cluster_config.py  cluster_processor.py  job_orchestrator.py  resource_manager.py
data_loader/config/: __init__.py  databricks_config.py  table_config.py
data_loader/core/: __init__.py  file_tracker.py  parallel_executor.py  pipeline_lock.py  processor.py  state_manager.py
data_loader/strategies/: __init__.py  append_strategy.py  base_strategy.py  scd2_strategy.py
data_loader/tests/: __init__.py  conftest.py  test_basic.py  test_cli_reset_state.py  test_cluster.py  test_config_loader.py  test_databricks_job.py  test_idempotency.py  test_integration.py  test_job_runner.py  test_recovery.py  test_state_manager.py
data_loader/utils/: __init__.py  helpers.py  logger.py
demo/: config_merge_demo.py  demo_config.json  demo_config.yaml  reset_state_demo.py  run_demo.py  run_job_demo.py  state_management_demo.py
docker/: README.md
docker/configs/: cluster_test_config.json  docker_test_config.json
docker/scripts/: generate_mock_data.py  run_integration_tests.py  run_tests.sh  validate_performance.py
docs/: change_checklist.md  databricks_job.md  pipeline_state.md  quickstart.md  reset_state.md  runtime_config.md  templates.md
