[tool.poetry]
name = "databricks-data-loader"
version = "0.1.0"
description = "A parallel data loading module for Databricks with file monitoring and multiple loading strategies"
authors = ["Infinit3Labs <info@example.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pyspark = ">=3.0.0"
delta-spark = ">=2.0.0"
pydantic = ">=2.0.0"
typer = ">=0.9.0"
loguru = ">=0.7.0"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
pytest-cov = ">=4.0.0"
black = ">=23.0.0"
flake8 = ">=6.0.0"
mypy = ">=1.0.0"

[tool.poetry.scripts]
databricks-data-loader = "data_loader.main:main"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
