[tool.poetry]
name = "databricks-data-loader"
version = "0.2.1"
description = "A parallel data loading module for Databricks with file monitoring and multiple loading strategies"
authors = ["Infinit3Labs <contact@infinit3labs.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pyspark = ">=3.0.0"
delta-spark = ">=2.0.0"
pydantic = ">=2.0.0"
typer = ">=0.9.0"
loguru = ">=0.7.0"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
pytest-cov = ">=4.0.0"
black = ">=23.0.0"
flake8 = ">=6.0.0"
mypy = ">=1.0.0"

[tool.poetry.group.test.dependencies]
pandas = ">=1.5.0"
numpy = ">=1.21.0"
faker = ">=18.0.0"
jupyter = ">=1.0.0"
notebook = ">=6.5.0"
ipykernel = ">=6.0.0"
matplotlib = ">=3.5.0"
seaborn = ">=0.11.0"
plotly = ">=5.0.0"

[tool.poetry.scripts]
databricks-data-loader = "data_loader.main:main"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
